Final edits to Platform admin section of Getting started with AAP
Create Platform admin section of Getting started with AAP

https://issues.redhat.com/browse/AAP-29067

Affects `titles/getting-started`

--- a/downstream/modules/platform/con-gs-config-authentication.adoc
+++ b/downstream/modules/platform/con-gs-config-authentication.adoc
@@ -5,5 +5,5 @@
 After your first login as an administrator you must configure authentication for your users. 
 Depending on your organization's needs and resources, you can either:
 
-* Set up Basic authentication by creating users, teams, and organizations manually.
+* Set up authentication by creating users, teams, and organizations manually.
 * Use an external source such as GitHub to configure authentication for your system.
