--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -20,7 +20,7 @@ There are two types of Red Hat Ansible content:
 Certified collections are included in your subscription to {PlatformName} and can be found in {HubName}.
 * {Valid} collections, which are customizable and therefore do not have a support guarantee, but have been tested in the {PlatformNameShort} environment. 
 
-For more information about Ansible content, see xref:platform/con-gs-create-automation-content.adoc[Create automation content] in xref:assembly-gs-auto-dev[Getting started as an automation developer].
+For more information about Ansible content, see xref:con-gs-create-automation-content[Create automation content] in xref:assembly-gs-auto-dev[Getting started as an automation developer].
 
 == Ansible roles
 
