--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -64,13 +64,8 @@ a|
 | 5432 | TCP | PostgreSQL | {ControllerNameStart} | External database
 | 27199 | TCP | Receptor | {ControllerNameStart} | Hop node and execution node
 | 27199 | TCP | Receptor | Hop node | Execution node
-| 6379 | TCP | Redis | {EDAName} | Platform gateway
-| 6379 | TCP | Redis | {EDAName} | {HubNameStart}
-| 6379 | TCP | Redis | {EDAName} | {EDAName}
-| 6379 | TCP | Redis | Platform gateway | Platform gateway
-| 6379 | TCP | Redis | Platform gateway | {HubNameStart}
-| 6379 | TCP | Redis | Platform gateway | {EDAName}
-| 16379 | TCP | Redis | Redis | Redis cluster node
+| 6379 | TCP | Redis | {EDAName} | Redis node
+| 6379 | TCP | Redis | Platform gateway | Redis node
 | 8433 | TCP | HTTPS | Platform gateway | Platform gateway
 | 50051 | TCP | gRPC | Platform gateway | Platform gateway
 |====
