--- a/downstream/modules/topologies/ref-rpm-b-env-b.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-b.adoc
@@ -62,8 +62,8 @@ Red Hat has tested the following configurations to install and run {PlatformName
 | 5432 | TCP | PostgreSQL | {ControllerNameStart} | External database
 | 27199 | TCP | Receptor | {ControllerNameStart} | Hop node and Execution node
 | 27199 | TCP | Receptor | Hop node | Execution node
-| 6379 | TCP | Redis | {EDAName} | Platform gateway
-| 6379 | TCP | Redis | Platform gateway | Platform gateway
+| 6379 | TCP | Redis | {EDAName} | Redis node
+| 6379 | TCP | Redis | Platform gateway | Redis node
 | 8443 | TCP | HTTPS | Platform gateway | Platform gateway
 | 50051 | TCP | gRPC | Platform gateway | Platform gateway
 |====
