update redis port

--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -66,6 +66,7 @@ a|
 | 27199 | TCP | Receptor | Hop node | Execution node
 | 6379 | TCP | Redis | {EDAName} | Redis node
 | 6379 | TCP | Redis | Platform gateway | Redis node
+| 16379 | TCP | Redis | Redis | Redis cluster node
 | 8433 | TCP | HTTPS | Platform gateway | Platform gateway
 | 50051 | TCP | gRPC | Platform gateway | Platform gateway
 |====
