--- a/downstream/modules/platform/proc-install-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-aap-operator.adoc
@@ -11,6 +11,12 @@
 . Select *Installation Mode*, *Installed Namespace*, and *Approval Strategy*.
 . Click btn:[Install].
 
-The installation process will begin. When installation is complete, a modal will appear notifying you that the {OperatorPlatform} is installed in the specified namespace.
+The installation process begins. When installation finishes, a modal appears notifying you that the {OperatorPlatform} is installed in the specified namespace.
 
 * Click btn:[View Operator] to view your newly installed {OperatorPlatform}.
+
+[IMPORTANT]
+====
+You can only install a single instance of the {OperatorPlatform} into a single namespace. 
+Installing multiple instances in the same namespace can lead to improper operation for both operator instances. 
+====
