--- a/downstream/modules/platform/con-RPM-install-eda-post-steps.adoc
+++ b/downstream/modules/platform/con-RPM-install-eda-post-steps.adoc
@@ -1,6 +1,6 @@
-[id="con-VM-install-eda-post-steps"]
+[id="con-RPM-install-eda-post-steps"]
 
-= Post installation steps for VM-based install
+= Post installation steps for RPM-based install
 
 You must complete post-install steps for setting up {PlatformNameShort} 2.5 with {EDAcontroller} 1.1 and {PlatformNameShort} 2.4 with {HubName} 4.9. 
 The installation program does not handle the creation of decision environments and credentials in this scenario. 
