--- a/downstream/modules/platform/proc-RPM-install-eda-controller.adoc
+++ b/downstream/modules/platform/proc-RPM-install-eda-controller.adoc
@@ -1,16 +1,16 @@
-[id="proc-VM-install-eda-controller"]
+[id="proc-RPM-install-eda-controller"]
 
 = Installing {EDAcontroller} 1.1 and configuring {ControllerName} 4.4 or 4.5
 
-Perform a new {PlatformNameShort} 2.5 VM-based installation of {EDAcontroller} 1.1 and configure it to work with an existing {PlatformNameShort} 2.4 installation of {ControllerName} 4.4 or 4.5.
+Perform a new {PlatformNameShort} 2.5 RPM-based installation of {EDAcontroller} 1.1 and configure it to work with an existing {PlatformNameShort} 2.4 installation of {ControllerName} 4.4 or 4.5.
 
 .Prerequisites
 
-* An existing VM-based installation of {PlatformNameShort} 2.4 with {ControllerName} version 4.4 or 4.5.
+* An existing RPM-based installation of {PlatformNameShort} 2.4 with {ControllerName} version 4.4 or 4.5.
 
 .Procedure
 
-. Follow the steps provided in link:{BaseURL}/red_hat_ansible_automation_platform/2.5/html-single/installing_on_virtual_machines/index[Installing on virtual machines] until the section link:{BaseURL}/red_hat_ansible_automation_platform/2.5/html-single/installing_on_virtual_machines/assembly-platform-install-scenario[Installing Red Hat Ansible Automation Platform] and ensure you download the {PlatformNameShort} 2.5 version of the VM-based installer.
+. Follow the steps provided in link:{BaseURL}/red_hat_ansible_automation_platform/2.5/html-single/installing_on_virtual_machines/index[Installing on virtual machines] until the section link:{BaseURL}/red_hat_ansible_automation_platform/2.5/html-single/installing_on_virtual_machines/assembly-platform-install-scenario[Installing Red Hat Ansible Automation Platform] and ensure you download the {PlatformNameShort} 2.5 version of the RPM-based installer.
 . Use the following example to populate the inventory file to deploy a new single instance of {EDAcontroller} 1.1:
 +
 ----
