--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -5,33 +5,83 @@
 [cols="50%,50%",options="header"]
 |====
 | *Variable* | *Description*
-| *`automationgateway_admin_username`* | The username used to identify and create the admin superuser in platform gateway.
+| *`automationgateway_admin_username`* | _Optional_
 
-| *`automationgateway_admin_password`* | The admin password used to connect to the platform gateway instance.
+The username used to identify and create the admin superuser in platform gateway.
+
+Default = `admin`
+
+| *`automationgateway_admin_password`* | _Required_
+
+The admin password used to connect to the platform gateway instance.
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
 
 Use of special characters for `automationgateway_admin_password` is limited. The password can include any printable ASCII character except `/`, `”`, or `@`.
 
-| *`automationgateway_admin_email`* | The email address used for the admin user for platform gateway.
+| *`automationgateway_admin_email`* | _Required_
+
+The email address used for the admin user for platform gateway.
+
+| *`automationgateway_grcp_server_processes*` | Platform gateway auth server threads/process.
+
+Default =`5`
+
+| *`automationgateway_grcp_server_max_threads_per_process | Platform gateway auth server threads/process.
+
+Default = `10`
+
+| *`automationgateway_grcp_auth_service_timeout | Platform gateway auth server timeout.
+
+Default = `30s`
+
+| *`automationgateway_disable_https*` | _Optional_
+
+Disable Nginx HTTPS.
+
+Default = false
+
+| *`automationgateway_disable_hsts | _Optional_
+
+Disable Nginx HSTS.
+
+Default = false
+
+| * `automationgateway_main_url*` | _Optional_
+
+The main platform gateup URL that clients will connect to (e.g., https://<gateway_node>).
+
+If not specified, the first the first node in {automationgateway} group will be used when needed.
 
 | *`automationgateway_pg_host`* | The hostname of the Postgres database used by platform gateway, which can be an externally managed database.
 
-| *`automationgateway_pg_port`* | The port number of the Postgres database used by platform gateway.
+| *`automationgateway_pg_port`* | _Optional_
+
+The port number of the Postgres database used by platform gateway.
 
 Default = `5432`.
 
-| *`automationgateway_pg_database`* | The Postgres database used by platform gateway.
+| *`automationgateway_pg_database`* | _Optional_
+
+The Postgres database used by platform gateway.
+
+RPM default = `automationgateway`
+
+Container default = `gateway`
+
+| *`automationgateway_pg_username`* | _Optional_
+
+The username for your platform gateway Postgres database.
 
 Default = `automationgateway`.
 
-| *`automationgateway_pg_username`* | The username for your platform gateway Postgres database.
+| *`automationgateway_pg_password`* | _Optional_
 
-Default = `automationgateway`.
+The password for the Postgres database used by platform gateway.
 
-| *`automationgateway_pg_password`* | The password for the Postgres database used by platform gateway.
+Use of special characters for `automationgateway_pg_password` is limited. The `!`, `#`, `0` and `@` characters are supported. 
 
-Use of special characters for `automationgateway_pg_password` is limited. The `!`, `#`, `0` and `@` characters are supported. Use of other special characters can cause the setup to fail.
+Use of other special characters can cause the setup to fail.
 
 | *`automationgateway_pg_sslmode`* | Choose one of the two available modes: `prefer` and `verify-full`.
 
@@ -42,6 +92,12 @@ Default = `prefer`.
 | *`automationgateway_main_url`* | The main platform gateway URL that clients will connect to (e.g. `https://<gateway-node>`).
 
 If not specified, the first node in the `[automationgateway]` group will be used when needed.
+
+| *`automationgateway_redis_host`* | The redis hostname used by platform gateway.
+
+| *`automationgateway_redis_port`* | The redis platform gateway port.
+
+Default = `6379`
 
 | *`automationgateway_ssl_cert`* | _Optional_
 
