--- a/downstream/modules/platform/proc-controller-user-permissions.adoc
+++ b/downstream/modules/platform/proc-controller-user-permissions.adoc
@@ -19,4 +19,4 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 . Select the roles to apply to the resources and click btn:[Next].
 . Review the settings and click btn:[Finish].
 + 
-The Add roles dialog displays indicating whether the role assignments were successfully applied, click btn[Close] to close the dialog.
+The Add roles dialog displays indicating whether the role assignments were successfully applied, click btn:[Close] to close the dialog.
