--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -46,7 +46,7 @@ Default = `false`
 
 | `*autiomation_event_stream_path | _Optional_
 
-API prefix path used EDA debug | _Optional_
+API prefix path used {EDAName} debug | _Optional_
 
 Default = false
 
