--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -5,7 +5,16 @@
 [cols="50%,50%",options="header"]
 |====
 | *Variable* | *Description*
-| *`automationedacontroller_admin_password`* | The admin password used by the {EdaController} instance.
+
+| *`automationedacontroller_activation_works*` | _Optional_
+
+Number of workers for ansible-rulebook activation pods in EDA.
+
+Default = `(# of cores or threads) * 2 + 1`
+
+| *`automationedacontroller_admin_password`* | _Required_
+
+The admin password used by the {EdaController} instance.
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
 
@@ -13,7 +22,9 @@ Use of special characters for `automationedacontroller_admin_password` is limite
 | *`automationedacontroller_admin_username`* | Username used by django to identify and create the admin superuser in {EDAcontroller}.
 
 Default = `admin`
-| *`automationedacontroller_admin_email`* | Email address used by django for the admin user for {EDAcontroller}.
+| *`automationedacontroller_admin_email`* | _Optional_
+
+Email address used by django for the admin user for {EDAcontroller}.
 
 Default = `admin@example.com`
 | *`automationedacontroller_allowed_hostnames`* | List of additional addresses to enable for user access to {EDAcontroller}.
@@ -22,40 +33,71 @@ Default = empty list
 | *`automationedacontroller_controller_verify_ssl`* | Boolean flag used to verify automation controller's web certificates when making calls from {EDAcontroller}. Verified is `true`; not verified is `false`.
 
 Default = `false`
-| *`automationedacontroller_disable_https`* | Boolean flag to disable HTTPS {EDAcontroller}. 
+| *`automationedacontroller_disable_https`* | _Optional_
+
+Boolean flag to disable HTTPS {EDAcontroller}. 
 
 Default = `false`
-| *`automationedacontroller_disable_hsts`* | Boolean flag to disable HSTS {EDAcontroller}. 
+| *`automationedacontroller_disable_hsts`* | _Optional_
+
+Boolean flag to disable HSTS {EDAcontroller}. 
 
 Default = `false`
+
+| `*autiomation_event_stream_path | _Optional_
+
+API prefix path used {EDAName} debug | _Optional_
+
+Default = false
+
 | *`automationedacontroller_gunicorn_workers`* | Number of workers for the API served through gunicorn.
 
 Default = (# of cores or threads) * 2 + 1
 | *`automationedacontroller_nginx_tls_files_remote`* | Boolean flag to specify whether cert sources are on the remote host (true) or local (false). 
 
 Default = `false`
-| *`automationedacontroller_max_running_activations`* | The number of maximum activations running concurrently per node.
+| *`automationedacontroller_max_running_activations`* | _Optional_
+
+The number of maximum activations running concurrently per node.
 
 This is an integer that must be greater than 0.
 
-Default = 12
-| *`automationedacontroller_user_headers`* | List of additional nginx headers to add to {EDAcontroller}'s nginx configuration. 
+Default = `12`
 
-Default = empty list
+| *`automation_redis_host*` | _Optional_
+
+The Redis hostname used by {EDAcontroller}.
+
+| *`automationeda_redis_port | _Optional_
+
+The port used for the redis host defined by automationeda_redis_host for {EDAcontroller}.
+
+Default =`6379`
+
 | *`automationedacontroller_gunicorn_workers`* | Number of workers for the API served through gunicorn.
 
 Default = (# of cores or threads) * 2 + 1
-| *`automationedacontroller_pg_database`* | The Postgres database used by {EDAcontroller}.
+| *`automationedacontroller_pg_database`* | _Optional_
 
-Default = `automtionedacontroller`.
+The Postgres database used by {EDAcontroller}.
+
+RPM default = `automationedacontroller`
+
+Container default = `eda`
 | *`automationnedacontroller_pg_host | The hostname of the Postgres database used by {EDAcontroller}, which can be an externally managed database.
-| *`automationedacontroller_pg_password`* | The password for the Postgres database used by {EDAcontroller}.
+| *`automationedacontroller_pg_password`* | _Required_
+
+The password for the Postgres database used by {EDAcontroller}.
 
 Use of special characters for `automationedacontroller_pg_password` is limited. The `!`, `#`, `0` and `@` characters are supported. Use of other special characters can cause the setup to fail.
-| *`automationedacontroller_pg_port`* | The port number of the Postgres database used by {EDAcontroller}.
+| *`automationedacontroller_pg_port`* | _Optional_
+
+The port number of the Postgres database used by {EDAcontroller}.
 
 Default = `5432`.
-| *`automationedacontroller_pg_username`* | The username for your {EDAcontroller} Postgres database.
+| *`automationedacontroller_pg_username`* | _Optional_
+
+The username for your {EDAcontroller} Postgres database.
 
 Default = `automationedacontroller`.
 | *`automationedacontroller_rq_workers`* | Number of Redis Queue (RQ) workers used by {EDAcontroller}. RQ workers are Python processes that run in the background.
@@ -71,4 +113,12 @@ Same as `automationhub_ssl_cert` but for {EDAcontroller} UI and API.
 `/root/ssl_certs/eda.<example>.com.key`
 
 Same as `automationhub_server_ssl_key` but for {EDAcontroller} UI and API.
+| *`automationedacontroller_user_headers`* | List of additional nginx headers to add to {EDAcontroller}'s nginx configuration. 
+
+Default = empty list
+| *`eda_node_type`* _Optional_
+
+The username used to identify and create the admin superuser in platform gateway.
+
+Default = `admin`
 |====
