updates from peer review feedback

--- a/downstream/modules/platform/con-gs-ansible-roles.adoc
+++ b/downstream/modules/platform/con-gs-ansible-roles.adoc
@@ -17,4 +17,4 @@ You can create roles using the Ansible Galaxy CLI tool, which is included with y
 ansible-galaxy role init <role_name>
 ----
 
-Standalone roles outside of Collections are still supported, but we recommend that you create new roles inside of a Collection to take advantage of all the features {PlatformNameShort} has to offer.
+Standalone roles outside of collections are still supported, but we recommend that you create new roles inside of a collection to take advantage of all the features {PlatformNameShort} has to offer.
