--- a/downstream/modules/platform/con-gs-define-events-rulebooks.adoc
+++ b/downstream/modules/platform/con-gs-define-events-rulebooks.adoc
@@ -13,13 +13,13 @@ Rulebooks use an "if-this-then-that” logic that tells {EDAName} what actions t
 
 Rulebooks can trigger the following activations:
 
-* 'run_job_template'
-* 'run_playbook' (only supported with ansible-rulebook CLI)
-* 'debug'
-* 'print_event'
-* 'set_fact'
-* 'post_event'
-* 'retract_fact'
-* 'shutdown'
+* `run_job_template`
+* `run_playbook` (only supported with ansible-rulebook CLI)
+* `debug`
+* `print_event`
+* `set_fact`
+* `post_event`
+* `retract_fact`
+* `shutdown`
 
 To read more about rulebook activations, see link:https://ansible.readthedocs.io/projects/rulebook/en/latest/actions.html[Actions] in the Ansible Rulebook documentation.
