--- a/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
+++ b/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
@@ -17,7 +17,7 @@ Execution environments tied to an organization require Organization administrato
 . Click btn:[Create execution environment] to create an {ExecEnvShort}.
 . Enter the appropriate details into the following fields: 
 .. *Name* (required): Enter a name for the {ExecEnvShort}.
-.. *Image* (required): Enter the image name. The image name requires its full location (repository), the registry, image name, and version tag, as in the following example: 'quay.io/ansible/awx-ee:latestrepo/project/image-name:tag'
+.. *Image* (required): Enter the image name. The image name requires its full location (repository), the registry, image name, and version tag, as in the following example: `quay.io/ansible/awx-ee:latestrepo/project/image-name:tag`
 .. Optional: *Pull*: Choose the type of pull when running jobs: 
 ... *Always pull container before running*: Pulls the latest image file for the container.
 ... *Only pull the image if not present before running*: Only pulls the latest image if none are specified.
