--- a/downstream/modules/platform/proc-gs-creating-a-role.adoc
+++ b/downstream/modules/platform/proc-gs-creating-a-role.adoc
@@ -8,14 +8,14 @@
 .Procedure
 
 . In your terminal, navigate to the roles directory inside a collection.
-. Create a role called 'my_role' inside the collection:
+. Create a role called `my_role` inside the collection:
 +
 [source,bash]
 ----
 $ansible-galaxy role init my_role
 ----
 +
-The collection now includes a role named 'my_role' inside the 'roles' directory, as you can see in this example:
+The collection now includes a role named `my_role` inside the `roles` directory, as you can see in this example:
 + 
 [source,bash]
 ----
@@ -42,11 +42,11 @@ The collection now includes a role named 'my_role' inside the 'roles' directory,
                 └── main.yml
 ----
 +
-. A custom role skeleton directory can be supplied by using the '--role-skeleton' argument. This allows organizations to create standardized templates for new roles to suit their needs. 
+. A custom role skeleton directory can be supplied by using the `--role-skeleton` argument. This allows organizations to create standardized templates for new roles to suit their needs. 
 +
 [source,bash]
 ----
 $ansible-galaxy role init my_role --role-skeleton ~/role_skeleton
 ----
 +
-This creates a role named 'my_role' by copying the contents of '~/role_skeleton' into 'my_role'. The contents of 'role_skeleton' can be any files or folders that are valid inside a role directory.
+This creates a role named `my_role` by copying the contents of `~/role_skeleton` into `my_role`. The contents of `role_skeleton` can be any files or folders that are valid inside a role directory.
