--- a/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
+++ b/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
@@ -12,7 +12,7 @@ Base images included with {PlatformNameShort} are hosted on the Red Hat Ecosyste
 
 .Procedure 
 
-. Log in to registry.redhat.io.
+. Log in to link:registry.redhat.io[registry.redhat.io].
 +
 [source,bash]
 ----
@@ -32,7 +32,7 @@ $podman pull registry.redhat.io/aap/<image name>
 * `Minimal` - Includes the latest Ansible-core 2.15 release along with Ansible Runner, but does not include collections or other content
 * `EE Supported` - Minimal, plus all Red Hat-supported collections and dependencies
 
-While these environments cover many automation use cases, you can add additional items to customize these containers for your specific needs. For more information about customizing your execution environment, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_and_consuming_execution_environments/assembly-publishing-exec-env#proc-customize-ee-image[Customizing an existing automation {ExecEnvShort} image] in the Creating and consuming execution environments guide. 
+While these environments cover many automation use cases, you can add additional items to customize these containers for your specific needs. For more information about customizing your execution environment, see link:{URLBuilder}/assembly-publishing-exec-env#proc-customize-ee-image[Customizing an existing automation {ExecEnvShort} image] in the {TitleBuilder} guide. 
 
 == About {Builder}
 
