--- a/downstream/modules/platform/proc-gs-auto-dev-create-automation-decision-proj.adoc
+++ b/downstream/modules/platform/proc-gs-auto-dev-create-automation-decision-proj.adoc
@@ -8,7 +8,7 @@ You can use the project function to organize your automation decision content in
 .Prerequisites
 
 * You have set up any neccessary credentials.
-For more information, see the link:link:{URLEDAUserGuide}/eda-credentials#eda-set-up-credential[Setting up credentials] section of the {TitleEDAUserGuide} guide.
+For more information, see the link:{URLEDAUserGuide}/eda-credentials#eda-set-up-credential[Setting up credentials] section of the {TitleEDAUserGuide} guide.
 * You have an existing repository containing rulebooks that are integrated with playbooks contained in a repository to be used by {ControllerName}.
 
 .Procedure
@@ -16,16 +16,16 @@ For more information, see the link:link:{URLEDAUserGuide}/eda-credentials#eda-se
 . From the navigation panel, select *{MenuADProjects}*.
 . Click btn:[Create project].
 . Enter the following information:
-.. *Name*: Enter project name.
-.. *Description*: This field is optional.
-.. *Organization*: Select the organization associated with the project.  
-.. *Source control type*: Git is the only SCM type available for use.
-.. *Proxy*: Proxy used to access HTTP or HTTPS servers.
-.. *Source control branch/tag/commit*: Branch to checkout. Can also be tags, commit hashes, or arbitrary refs.
-.. *Source control refspec*: A refspec to fetch. This parameter allows access to references through the branch field not otherwise available.
-.. Optional: *Source control credential*: The token needed to use the source control URL.
-.. *Content signature validation credential*: Enables content signing to verify that the content has remained secure during project syncing. If the content is tampered with, the job will not run.
-.. *Options*: Checking the box next to *Verify SSL* verifies the SSL with HTTPS when the project is imported. 
+* *Name*: Enter project name.
+* *Description*: This field is optional.
+* *Organization*: Select the organization associated with the project.  
+* *Source control type*: Git is the only SCM type available for use.
+* *Proxy*: Proxy used to access HTTP or HTTPS servers.
+* *Source control branch/tag/commit*: Branch to checkout. Can also be tags, commit hashes, or arbitrary refs.
+* *Source control refspec*: A refspec to fetch. This parameter allows access to references through the branch field not otherwise available.
+* Optional: *Source control credential*: The token needed to use the source control URL.
+* *Content signature validation credential*: Enables content signing to verify that the content has remained secure during project syncing. If the content is tampered with, the job will not run.
+* *Options*: Checking the box next to *Verify SSL* verifies the SSL with HTTPS when the project is imported. 
 . Click btn:[Create project].
 
 Your project is now created and can be managed in the *Projects* screen.
