--- a/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
+++ b/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
@@ -37,7 +37,7 @@ While these environments cover many automation use cases, you can add additional
 == About {Builder}
 
 You also have the option of creating an entirely new {ExecEnvShort} with {Builder}, also referred to as {ExecEnvShort} builder. 
-{Builder} is a command line tool you can use to create an e{ExecEnvShort} for Ansible. 
+{Builder} is a command line tool you can use to create an {ExecEnvShort} for Ansible. 
 You can only create {ExecEnvShort}s with {Builder}. 
 
 To build your own {ExecEnvShort}, you must: 
