AAP-31846 - Reconcile chapters 1, 2 and 4 of Access management guide

--- a/downstream/modules/platform/con-gw-overview-access-auth.adoc
+++ b/downstream/modules/platform/con-gw-overview-access-auth.adoc
@@ -4,14 +4,16 @@
 
 = Overview of access management and authentication
 
-Ansible Automation Platform features a platform interface where you can set up centralized authentication, configure access management, and configure global and system level settings from a single location.
+{PlatformNameShort} features a platform interface where you can set up centralized authentication, configure access management, and configure global and system level settings from a single location.
+
+The first time you log in to the {PlatformNameShort}, you must enter your subscription information to activate the platform. For more information about licensing and subscriptions, refer to xref:assembly-gateway-licensing[Managing {PlatformNameShort} licensing, updates and support]. 
 
 A system administrator can configure access, permissions and system settings through the following tasks:
 
-xref:gw-configure-authentication[Configuring authentication in the Ansible Automation Platform], where you set up simplified login for users by selecting from several authentication methods available and define permissions and assign them to users with authenticator maps.
+* xref:gw-configure-authentication[Configuring authentication in the {PlatformNameShort}], where you set up simplified login for users by selecting from several authentication methods available and define permissions and assign them to users with authenticator maps.
 
-[XREF TBD]Configuring token-based authentication, where you can configure authentication of third-party tools and services with the platform through integrated OAuth 2 token support.
+* xref:gw-token-based-authentication[Configuring access to external applications with token-based authentication], where you can configure authentication of third-party tools and services with the platform through integrated OAuth 2 token support.
 
-xref:gw-managing-access[Managing access with role based access control], where you configure user access based on their role within a platform organization.
+* xref:gw-managing-access[Managing access with role based access control], where you configure user access based on their role within a platform organization.
 
-[XREF TBD]Configuring Ansible Automation Platform, where you can configure global and system level settings for the platform and services.
+* xref:assembly-gw-settings[Configuring {PlatformNameShort}], where you can configure global and system level settings for the platform and services.
