Add conditional tagging for reuse of sys reqs content

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -6,7 +6,7 @@
 |====
 | *Variable* | *Description*
 
-| *`automationedacontroller_activation_works*` | _Optional_
+| *`automationedacontroller_activation_works`* | _Optional_
 
 Number of workers for ansible-rulebook activation pods in EDA.
 
@@ -44,7 +44,7 @@ Boolean flag to disable HSTS {EDAcontroller}.
 
 Default = `false`
 
-| `*autiomation_event_stream_path | _Optional_
+| `*autiomation_event_stream_path*` | _Optional_
 
 API prefix path used {EDAName} debug | _Optional_
 
@@ -64,11 +64,11 @@ This is an integer that must be greater than 0.
 
 Default = `12`
 
-| *`automation_redis_host*` | _Optional_
+| *`automation_redis_host`* | _Optional_
 
 The Redis hostname used by {EDAcontroller}.
 
-| *`automationeda_redis_port | _Optional_
+| *`automationeda_redis_port`* | _Optional_
 
 The port used for the redis host defined by automationeda_redis_host for {EDAcontroller}.
 
@@ -84,7 +84,7 @@ The Postgres database used by {EDAcontroller}.
 RPM default = `automationedacontroller`
 
 Container default = `eda`
-| *`automationnedacontroller_pg_host | The hostname of the Postgres database used by {EDAcontroller}, which can be an externally managed database.
+| *`automationnedacontroller_pg_host`* | The hostname of the Postgres database used by {EDAcontroller}, which can be an externally managed database.
 | *`automationedacontroller_pg_password`* | _Required_
 
 The password for the Postgres database used by {EDAcontroller}.
