--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -23,7 +23,7 @@ Use of special characters for `automationgateway_admin_password` is limited. The
 
 The email address used for the admin user for platform gateway.
 
-| *`automationgateway_grcp_server_processes*` | Platform gateway auth server threads/process.
+| *`automationgateway_grcp_server_processes`* | Platform gateway auth server threads/process.
 
 Default =`5`
 
@@ -35,7 +35,7 @@ Default = `10`
 
 Default = `30s`
 
-| *`automationgateway_disable_https*` | _Optional_
+| *`automationgateway_disable_https`* | _Optional_
 
 Disable Nginx HTTPS.
 
@@ -47,7 +47,7 @@ Disable Nginx HSTS.
 
 Default = false
 
-| * `automationgateway_main_url*` | _Optional_
+| *`automationgateway_main_url`* | _Optional_
 
 The main platform gateup URL that clients will connect to (e.g., https://<gateway_node>).
 
