--- a/downstream/assemblies/platform/assembly-system-requirements.adoc
+++ b/downstream/assemblies/platform/assembly-system-requirements.adoc
@@ -14,19 +14,26 @@ Use this information when planning your {PlatformName} installations and designi
 * You have configured an NTP client on all nodes. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/migrate-isolated-execution-nodes#automation_controller_configuration_requirements[Configuring NTP server using Chrony].
 
 // emurtough commented out files to address duplication across 2.5 doc set 9/18/2024
-// include::platform/ref-system-requirements.adoc[leveloffset=+1]
+// ddacosta added conditional tags to share content between install guide and planning guide
+
+ifdef::aap-plan[]
 include::platform/ref-RPM-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-containerized-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-OCP-system-requirements.adoc[leveloffset=+1]
-// include::platform/ref-gateway-system-requirements.adoc[leveloffset=+1]
-// include::platform/ref-controller-system-requirements.adoc[leveloffset=+1]
-// include::platform/ref-automation-hub-requirements.adoc[leveloffset=+1]
-// include::platform/ref-ha-hub-reqs.adoc[leveloffset=+2]
-// include::platform/ref-eda-system-requirements.adoc[leveloffset=+1]
-// include::platform/ref-postgresql-requirements.adoc[leveloffset=+1]
-// include::platform/proc-setup-postgresql-ext-database.adoc[leveloffset=+2]
-// include::platform/proc-enable-hstore-extension.adoc[leveloffset=+2]
-// include::platform/proc-benchmark-postgresql.adoc[leveloffset=+2]
+endif::aap-plan[]
+
+ifdef::aap-install[]
+include::platform/ref-system-requirements.adoc[leveloffset=+1]
+include::platform/ref-gateway-system-requirements.adoc[leveloffset=+1]
+include::platform/ref-controller-system-requirements.adoc[leveloffset=+1]
+include::platform/ref-automation-hub-requirements.adoc[leveloffset=+1]
+include::platform/ref-ha-hub-reqs.adoc[leveloffset=+2]
+include::platform/ref-eda-system-requirements.adoc[leveloffset=+1]
+include::platform/ref-postgresql-requirements.adoc[leveloffset=+1]
+include::platform/proc-setup-postgresql-ext-database.adoc[leveloffset=+2]
+include::platform/proc-enable-hstore-extension.adoc[leveloffset=+2]
+include::platform/proc-benchmark-postgresql.adoc[leveloffset=+2]
+endif::aap-install[]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
