peer review feedback

--- a/downstream/modules/platform/con-gs-create-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-create-automation-content.adoc
@@ -11,7 +11,7 @@ A playbook contains one or more plays. A basic play contains the following param
 
 * *Name*: a brief description of the overall function of the playbook, which assists in keeping it readable and organized for all users. 
 * *Hosts*: identifies the target or targets for Ansible to run against.
-* *Become statements*: this optional statement can be set to 'true' or 'yes' to enable privilege escalation using a become plugin (such as `sudo`, `su`, `pfexec`, `doas`, `pbrun`, `dzdo`, `ksu`).
+* *Become statements*: this optional statement can be set to `true` or `yes` to enable privilege escalation using a become plugin (such as `sudo`, `su`, `pfexec`, `doas`, `pbrun`, `dzdo`, `ksu`).
 * *Tasks*: this is the list of actions that get executed against each host in the play. 
 
 Here is an example of a play in a playbook. You can see the name of the play, the host, and the list of tasks included in the play. 
