--- a/downstream/modules/platform/con-gs-auto-dev-about-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-dev-about-inv.adoc
@@ -33,7 +33,7 @@ NOTE: Set the `prevent_instance_group_fallback` option for smart inventories thr
 +
 * *Variables* (*Source variables* for constructed inventories):
 ** *Variables*: Variable definitions and values to apply to all hosts in this inventory. Enter variables using either JSON or YAML syntax. Use the radio button to toggle between the two.
-** *Source variables* for constructed inventories are used to configure the constructed inventory plugin. Source variables create groups under the `groups` data key. The variable accepts Jinja2 template syntax, renders it for every host, makes a `true`` or `false`` evaluation, and includes the host in the group (from the key of the entry) if the result is `true`. 
+** *Source variables* for constructed inventories are used to configure the constructed inventory plugin. Source variables create groups under the `groups` data key. The variable accepts Jinja2 template syntax, renders it for every host, makes a `true` or `false` evaluation, and includes the host in the group (from the key of the entry) if the result is `true`. 
 . Click btn:[Create inventory].
 
 After creating the new inventory, you can proceed with configuring permissions, groups, hosts, sources, and viewing completed jobs, if applicable to the type of inventory.
