--- a/downstream/modules/platform/con-gs-execution-env.adoc
+++ b/downstream/modules/platform/con-gs-execution-env.adoc
@@ -2,8 +2,19 @@
 
 = Build and use an {ExecEnvShort}
 
+All automation in Red Hat Ansible Automation Platform runs on container images called {ExecEnvName}s.
+
 {ExecEnvNameStart} are consistent and shareable container images that serve as Ansible control nodes. 
 {ExecEnvNameStart} reduce the challenge of sharing Ansible content that has external dependencies. 
-If automation content is like a script that a developer has written, an automation {ExecEnvShort} is like a replica of that developer's environment, thereby enabling you to reproduce and scale the automation content that the developer has written.
+If automation content is like a script that a developer has written, an automation {ExecEnvShort} is like a replica of that developer's environment, thereby enabling you to reproduce and scale the automation content that the developer has written. In this way, {ExecEnvShort}s make it easier for you to implement automation in a range of environments.
 
-{ExecEnvNameStart}s make it easier for you to implement automation in a range of environments.
+{ExecEnvNameStart}s contain: 
+
+* Ansible Core
+* {Runner}
+* Ansible Collections
+* Python libraries
+* System dependencies
+* Custom user needs
+
+You can either use the default base {ExecEnvShort} included in your {PlatformNameShort} subscription, or you can define and create an {ExecEnvNameSing} using {Builder}.
