--- a/downstream/modules/platform/proc-gs-auto-dev-create-automation-execution-proj.adoc
+++ b/downstream/modules/platform/proc-gs-auto-dev-create-automation-execution-proj.adoc
@@ -21,13 +21,13 @@ Procedure
 * Optional: *Description*
 * *Organization* (required): A project must have at least one organization. Select one organization now to create the project. When the project is created you can add additional organizations.
 * Optional: *Execution Environment*: Enter the name of the {ExecEnvShort} or search from a list of existing ones to run this project.
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/upgrading-to-ees[Migrating to automation execution environments] in the _Red Hat Ansible Automation Platform Upgrade and Migration Guide_.
+For more information, see link:{URLUpgrade}/upgrading-to-ees[Migrating to automation execution environments] in the {TitleUpgrade}.
 * *Source Control Type* (required): Select an SCM type associated with this project from the menu.
 Options in the following sections become available depending on the type chosen.
-For more information, see [ADD 2.5 LINK][Managing playbooks manually] or [ADD 2.5 LINK]][Managing playbooks using source control].
+For more information, see link:{URLControllerUserGuide}/index#proc-projects-manage-playbooks-manually[Managing playbooks manually] or link:{URLControllerUserGuide}/index#ref-projects-manage-playbooks-with-source-control[Managing playbooks using source control].
 * Optional: *Content Signature Validation Credential*: Use this field to enable content verification.
 Specify the GPG key to use for validating content signature during project synchronization.
 If the content has been tampered with, the job will not run.
-For more information, see [ADD 2.5 LINK][Project signing and verification].
+For more information, see link:{URLControllerUserGuide}/index#assembly-controller-project-signing[Project signing and verification].
 . Click btn:[Create project].
 
