tbl-fix - Fixing the table formatting in EDA Variables

--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -44,9 +44,9 @@ Boolean flag to disable HSTS {EDAcontroller}.
 
 Default = `false`
 
-| `*autiomation_event_stream_path*` | _Optional_
+| *`automation_event_stream_path`* | _Optional_
 
-API prefix path used {EDAName} debug | _Optional_
+API prefix path used {EDAName} debug 
 
 Default = false
 
