tbl-fix - updated variables for consistent highlighting

--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -27,11 +27,11 @@ The email address used for the admin user for platform gateway.
 
 Default =`5`
 
-| *`automationgateway_grcp_server_max_threads_per_process | Platform gateway auth server threads/process.
+| *`automationgateway_grcp_server_max_threads_per_process`* | Platform gateway auth server threads/process.
 
 Default = `10`
 
-| *`automationgateway_grcp_auth_service_timeout | Platform gateway auth server timeout.
+| *`automationgateway_grcp_auth_service_timeout`* | Platform gateway auth server timeout.
 
 Default = `30s`
 
@@ -41,7 +41,7 @@ Disable Nginx HTTPS.
 
 Default = false
 
-| *`automationgateway_disable_hsts | _Optional_
+| *`automationgateway_disable_hsts`* | _Optional_
 
 Disable Nginx HSTS.
 
